src/objects/LeanData__Lead_Conversion__c.object
<CustomObject>
    <description>Used for storing lead informations in asynch convert process</description>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversion_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Conversion_Params__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Converted_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Converted_Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Do_Not_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__New_OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New OwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Pending_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Action</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Prefer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Contact for Dedupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Track number of attempts that Lead Converter batch is to process this conversion</description>
        <label>Processing Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Serialized_Matched_Leads__c</fullName>
        <defaultValue>null</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Serialized Matched Leads</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lead Conversion</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Is_Processed__c</columns>
        <columns>LeanData__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Conversion Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>